spacing issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,7 +76,11 @@ a:visited {
 }
 a.post-date {
 	font-size: 0.8em;
-	
+	font-weight: bold;
+}
+
+.e-content {
+	margin-bottom: 2em;
 }
 .e-content p:first-of-type {
 	margin-top: 0;
